2022-05-31 Felix Salfelder <felix AT salfelder.org>

	* support/regression/cases/Makefile.in:
	  jump to end of gte test in wrapped exit(0) calls, enable two
	  more, 20010116-1.c, 20070424-1.c

2022-05-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/sdbinutils/include/ansidecl.h: revert to previous
	* support/sdbinutils/libiberty/Makefile.in: check local include
	  files first

2022-05-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/cases/Makefile.in: replace "echo -n" with
	  "printf" to handle hosts that don't support "-n" option
	* support/sdbinutils/include/ansidecl.h: disable some attributes
	  when compiling with clang so the Mac OS snapshot will build

2022-05-24 Daniel Drotos <drdani AT mazsola.iit.uni-miskolc.hu>

	* support/scripts/sdcc.nsi: install/deinstall more uCsim
	  binaries with correct names

2022-05-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: update for hc08 simulator name change
	* support/regression/Makefile.in: only display first 20 failures
	  per test file (check the .out file if you need all of them)

2022-05-23 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Document reasons for some failing gte tests.

2022-05-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Document reasons for some failing TinyC tests.

2022-05-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Document reasons for some failing gte tests.

2022-05-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/MakeList,
	  support/regression/cases/Makefile.in:
	  Document reasons for failing QuickC tests (lack of memory / speed vs. SDCC bugs).
