@@ -1,3 +1,8 @@
+2022-05-31 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* support/regression/cases/Makefile.in:
+	  Document reasons for some failing gte tests, enable tests that failed due to bug #3402 before.
+
 2022-05-31 Felix Salfelder <felix AT salfelder.org>
 
 	* support/regression/cases/Makefile.in:
